[package]
name = "ifdohtem"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
#serde-xml-rs = "0.6"
quick-xml = { version = "0.28.2", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1.3.0"
